fix spacing issue for first project, clamp h4 font-size

--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -2,8 +2,13 @@
   padding-bottom: 0;
 }
 
+.section-container:nth-of-type(4) .content {
+  padding: 0;
+}
+
 .section-container:nth-of-type(5) .section {
   padding-top: 0;
+  margin-top: 1.5rem;
 }
 
 .project {
@@ -106,11 +111,5 @@
   }
   :is(.project-links, .project-tech-container) {
     justify-content: initial;
-  }
-}
-
-@media (max-width: 520px) {
-  .project-content {
-    padding: 1rem;
   }
 }
